syntax = "proto3";

package calculator;
option go_package = "./calculatorpb";


service CalculatorService {
    rpc Add(AddRequest) returns (AddResponse);    // unary
    rpc Primes(PrimesRequest) returns (stream PrimeResponse);  // server streaming
    rpc Avg(stream AvgRequest) returns (AvgResponse); // client side streaming
    rpc Max(stream MaxRequest) returns (stream MaxResponse); // BiDi streaming
}

message AddRequest {
    int32 firstParam = 1;
    int32 secondParam = 2;
}

message AddResponse {
    int32 result = 1;
}

message PrimesRequest {
    int64 number = 1;
}

message PrimeResponse {
    int64 result = 1;
}

message AvgRequest {
    int64 number = 1;
}

message AvgResponse {
    int64 result = 1;
}

message MaxRequest {
    int32 number = 1;
}

message MaxResponse {
    int32 result = 1;
}